side-panel.css
:root {
    --primary-color: #ffbc52;
    --secondary-color: #47a9ff;
    --interactive-color: var(--secondary-color);
    --background-color: #1b1c1d;
    --text-color: #fff;
    --border-color: #4a5050;
    --user-chat-background: #333537;
    --button-background: #4a5050;
    --button-activated-background: #5d6464;
    --gap: 0.25em;
    --gap2: calc(var(--gap) * 2);
    --gap3: calc(var(--gap) * 3);
    --gap4: calc(var(--gap) * 4);
    --border-radius: var(--gap4);
    --animation-speed: 0.2s;

    @media (prefers-color-scheme: light) {
        --background-color: #fafcff;
        --text-color: #1b1c1d;
        --border-color: #ccc;
        --user-chat-background: #f0f0f0;
        --button-background: #e0e0e0;
        --button-activated-background: #d0d0d0;

        button:hover {
            filter: brightness(85%);
        }
    }
}

*:disabled {
    opacity: 0.5;
    cursor: not-allowed;
}

html,
body {
    background-color: var(--background-color);
    color: var(--text-color);
    padding: 0;
    margin: var(--gap);
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;

    @media (min-width: 500px) {
        font-size: 100%;
    }
}

a {
    color: var(--interactive-color);
    text-decoration: none;
}

p {
    margin-block-start: var(--gap4);
    margin-block-end: var(--gap4);
}

label {
    font-weight: bold;
    display: block;
}

button {
    font-size: inherit;
    border-radius: var(--border-radius);
    background-color: var(--button-background);
    border: none;
    color: var(--text-color);
    padding: 0.5em 1em;
    cursor: pointer;
    transition: filter var(--animation-speed) ease-in-out;

    &.cta {
        background-color: var(--interactive-color);
    }

    &:hover {
        filter: brightness(125%);
        box-shadow: 0 0 var(--gap2) 0 var(--interactive-color);
    }
}

.button-bar {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    gap: var(--gap2);
}

header {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    gap: var(--gap2);

    #version {
        margin-right: auto;
        opacity: 0.6;
    }
}

fieldset {
    border: 1px solid var(--border-color);
    border-radius: var(--border-radius);
    padding: var(--gap4);
    margin: 0;
}

select,
textarea,
input[type='text'] {
    border: 1px solid var(--border-color);
    border-radius: var(--border-radius);
    background-color: transparent;
    padding: var(--gap4);
    margin: var(--gap4) 0;
    color: inherit;
    font-family: inherit;
    width: 100%;
    box-sizing: border-box;
}

input[type='range'] {
    width: 100%;
}

option {
    background-color: var(--background-color);
    color: inherit;
}

textarea {
    resize: vertical;
}

hr {
    margin-block-start: var(--gap4);
    margin-block-end: var(--gap4);
    border: none;
    border-top: solid 1px var(--border-color);

    &.spacer {
        border: none;
        margin-block-end: 0;

        &.spacer--4 {
            margin-block-start: var(--gap4);
        }
    }
}

.prompt-controls {
    display: flex;
    align-items: center;
    gap: var(--gap4);

    .prompt-token-count {
        flex-grow: 1;
    }
}

.prompt-stats {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: var(--gap4);
}

.stat {
    padding-right: var(--gap);

    &[title] {
        cursor: help;
    }

    .value {
        color: var(--primary-color);
    }

    .unit {
        font-style: italic;
    }
}

.chat-placeholder {
    text-align: center;
    padding-bottom: var(--gap4);

    & .chat-placeholder__welcome {
        font-size: 1.5em;
        font-weight: bold;
        margin-bottom: var(--gap4);
        background: linear-gradient(45deg, var(--primary-color), var(--secondary-color), var(--primary-color));
        background-size: 200% auto;
        -webkit-background-clip: text;
        background-clip: text;
        color: transparent;
        animation: gradient-animation 4s ease infinite;
    }

    & .chat-placeholder__prompt-suggestions {
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
        gap: var(--gap2);
        align-items: center;
        justify-content: center;
    }
}

.chat-container {
    display: flex;
    flex-direction: column;
    gap: var(--gap4);
    padding: var(--gap4) 0;
}

.chat-container__chat {
    & p {
        &:first-child {
            margin-block-start: 0;
        }

        &:last-child {
            margin-block-end: 0;
        }
    }

    &.chat-container__chat--user {
        margin-top: var(--gap4);
        padding: var(--gap4);
        background-color: var(--user-chat-background);
        align-self: flex-end;
        border-radius: var(--border-radius);
        border-top-right-radius: var(--gap);
    }
}

progress {
    -webkit-appearance: none;
    appearance: none;
    width: 100%;
    height: 1em;
    border: 1px solid var(--border-color);
    border-radius: var(--border-radius);
    background-color: transparent;
    box-sizing: border-box;

    &::-webkit-progress-bar {
        background-color: transparent;
        border-radius: var(--border-radius);
    }

    &::-webkit-progress-value {
        background-color: var(--primary-color);
        border-radius: var(--border-radius);
        transition: width var(--animation-speed) ease-in-out;
    }
}

meter {
    width: 100%;
    box-sizing: border-box;

    &::-webkit-meter-bar {
        background-color: transparent;
        border: 1px solid var(--border-color);
        border-radius: var(--border-radius);
    }
}

/* Inspired by https://css-loaders.com/dots/ */
.loading-animation {
    margin: 0;
    width: 3em;
    aspect-ratio: 2;
    --_g: no-repeat radial-gradient(circle closest-side, var(--border-color) 90%, transparent);
    background:
        var(--_g) 0% 50%,
        var(--_g) 50% 50%,
        var(--_g) 100% 50%;
    background-size: calc(100% / 3) 50%;
    animation: loader-animation 1s infinite linear;
}
@keyframes loader-animation {
    20% {
        background-position:
            0% 0%,
            50% 50%,
            100% 50%;
    }
    40% {
        background-position:
            0% 100%,
            50% 0%,
            100% 50%;
    }
    60% {
        background-position:
            0% 50%,
            50% 100%,
            100% 0%;
    }
    80% {
        background-position:
            0% 50%,
            50% 50%,
            100% 100%;
    }
}

@keyframes gradient-animation {
    0% {
        background-position: 0% 50%;
    }
    50% {
        background-position: 100% 50%;
    }
    100% {
        background-position: 0% 50%;
    }
}

footer {
    margin-top: var(--gap4);
    padding-top: var(--gap4);
    text-align: center;
    border-top: 1px solid var(--primary-color);

    ul {
        margin: 0;
        padding: var(--gap2) 0;
        list-style: none;
        display: flex;
        justify-content: center;

        li {
            padding: 0 var(--gap2);
        }
    }

    .flag {
        height: 1em;
    }

    .logo {
        width: 12ex;
    }
}

